--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,8 @@
 .card {
   width: 8rem;
   height: 8rem;
-  position: relative;
   transition: transform 0.6s;
+  margin: auto;
   transform-style: preserve-3d;
 }
 
@@ -86,7 +86,6 @@
 .back {
   width: 100%;
   height: 100%;
-  position: absolute;
   backface-visibility: hidden;
 }
 
