--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,6 @@ body {
   fill: #ffffff;
 }
 
-.card.playing .front {
-  background-color: red !important;
+.disabled {
+  background-color: rgb(22, 189, 0) !important;
 }
